<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_medium"
        android:text="@string/pmii_launcher"
        android:textColor="?attr/colorPrimary"
        android:layout_marginBottom="@dimen/_4sdp"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/exo"
        android:text="@string/versi"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/_14ssp" />

    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/ic_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/exo"
        android:text="@string/copyright"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/_12ssp" />
</LinearLayout>