<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentTiga"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".fragment.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorOnPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_16sdp"
            android:fontFamily="@font/exo_semibold"
            android:gravity="center"
            android:text="@string/pengaturan"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_16ssp" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@id/toolbar3"
        android:background="?attr/colorSecondaryVariant"
        android:visibility="visible" />

    <!--    BARIS PERTAMA    -->
    <LinearLayout
        android:id="@+id/linear_contributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar3"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_contributor" />
        </LinearLayout>

        <TextView
            android:id="@+id/kontributor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/exo"
            android:gravity="center_vertical"
            android:text="@string/kontributor"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>

    <!--    BARIS KEDUA    -->
    <LinearLayout
        android:id="@+id/linear_contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_contributor"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_theme" />
        </LinearLayout>

        <TextView
            android:id="@+id/temaGelap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo"
            android:text="@string/tema_gelap"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_16ssp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <Switch
                android:id="@+id/switchMode"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_16sdp"
                android:thumbTint="@drawable/item_thumb_switch"
                android:trackTint="@drawable/item_track_switch"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

    </LinearLayout>

    <!--    BARIS KETIGA    -->
    <LinearLayout
        android:id="@+id/linear_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_contrast"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_rating" />
        </LinearLayout>

        <TextView
            android:id="@+id/beriRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo"
            android:text="@string/beri_rating"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>

    <!--    BARIS KEEMPAT    -->
    <LinearLayout
        android:id="@+id/linear_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_rating"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_share" />
        </LinearLayout>

        <TextView
            android:id="@+id/bagikan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo"
            android:text="@string/bagikan"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>

    <!--    BARIS KELIMA    -->
    <LinearLayout
        android:id="@+id/linear_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_share"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_info" />
        </LinearLayout>

        <TextView
            android:id="@+id/tentang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo"
            android:text="@string/tentang"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>

</RelativeLayout>